pacman/pacman-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pacman
  name: pacman
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: pacman
status:
  loadBalancer: {}
