pacman/pacman-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: pacman
  name: pacman
spec:
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: pacman
    weight: 100
